# pretraining

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  export.py  train.py
src/configs/: __init__.py  export.yaml  train.yaml
src/configs/callbacks/: default.yaml  model_checkpoint.yaml
src/configs/data/: image_folder.yaml
src/configs/experiment/: yolov11s_dinov2.yaml  yolov8s_dinov2.yaml
src/configs/hydra/: default.yaml
src/configs/logger/: csv.yaml  tensorboard.yaml  wandb.yaml
src/configs/model/: distillation.yaml
src/configs/monitoring/: default.yaml
src/configs/paths/: default.yaml
src/configs/student/: yolov11s.yaml  yolov8n.yaml  yolov8s.yaml
src/configs/teacher/: dinov2_vitb14.yaml  dinov2_vitl14.yaml  dinov2_vits14.yaml
src/configs/trainer/: cpu.yaml  ddp.yaml  default.yaml  gpu.yaml
src/data/: __init__.py  image_datamodule.py  transforms.py
src/methods/: __init__.py  distillation_module.py  losses.py
src/models/: __init__.py
src/models/components/: __init__.py  projection_head.py
src/models/students/: __init__.py  base.py  generic.py  yolo.py
src/models/teachers/: __init__.py  base.py  dinov2.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  utils.py
